# thread-recall

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/thread_recall/: __init__.py  cli.py  mcp_server.py  store.py
tests/: conftest.py  test_mcp_isolation.py  test_store.py
